// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PopoverElement /> should render component 1`] = `
<DocumentFragment>
  .c7 {
  position: absolute;
  stroke-width: 20px;
}

.c7[data-src-position="1"],
.c7[data-src-position="2"] {
  height: 15px;
  width: 10px;
}

.c7[data-src-position="1"] path:last-child,
.c7[data-src-position="2"] path:last-child {
  display: none;
}

.c7[data-src-position="4"],
.c7[data-src-position="8"] {
  height: 10px;
  width: 15px;
}

.c7[data-src-position="4"] path:first-child,
.c7[data-src-position="8"] path:first-child {
  display: none;
}

.c7[data-src-position="1"],
.c7[data-src-position="8"] {
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
}

.c0 > .c2 {
  font-size: 1rem;
  padding: .5rem .75rem;
}

.c0 > .c4 {
  font-size: .875rem;
  padding: .7rem .8rem;
}

.c3 {
  box-sizing: border-box;
  margin: 0;
}

.c5 {
  box-sizing: border-box;
}

.c1 {
  box-sizing: border-box;
  color: #323a46;
  fill: #323a46;
  font-family: inherit;
  position: fixed;
  z-index: 3000;
}

.c1 .c4 {
  background: #fff;
  border: solid 1px #dbdbdb;
}

.c1 .c2 {
  background: #0665d0;
  border: solid 1px #0556B2;
  color: #fff;
  fill: #fff;
}

.c1 .c2 ~ .c6[data-arrow-header="true"] {
  fill: #0665d0;
  stroke: #0556B2;
}

.c1 .c2 + .c4 {
  border-top: 0;
}

.c1 .c6[data-arrow-header="false"] {
  fill: #fff;
  stroke: #dbdbdb;
}

<div
    class="c0 c1"
  >
    <h4
      class="c2 c3"
    >
      Header
    </h4>
    <div
      class="c4 c5"
    >
      Content
    </div>
    <svg
      class="c6 c7"
    >
      <path
        d="M251.8,371.6c-17.4,5.9-37.2,2.6-50.4-8L16.3,215.3v-0.1c-18.1-14.5-18.1-38.1,0-52.6L201.4,14.2 c13.3-10.7,33.1-13.8,50.4-8"
      />
      <path
        d="M371,0c5.9,17.4,2.6,37.2-8,50.4L214.7,235.5h-0.1c-14.5,18.1-38.1,18.1-52.6,0L13.6,50.4 C2.9,37.1-0.2,17.3,5.6,0"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`<PopoverElement /> should render component with responsive size props 1`] = `
<DocumentFragment>
  .c7 {
  position: absolute;
  stroke-width: 20px;
}

.c7[data-src-position="1"],
.c7[data-src-position="2"] {
  height: 15px;
  width: 10px;
}

.c7[data-src-position="1"] path:last-child,
.c7[data-src-position="2"] path:last-child {
  display: none;
}

.c7[data-src-position="4"],
.c7[data-src-position="8"] {
  height: 10px;
  width: 15px;
}

.c7[data-src-position="4"] path:first-child,
.c7[data-src-position="8"] path:first-child {
  display: none;
}

.c7[data-src-position="1"],
.c7[data-src-position="8"] {
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
}

.c0 > .c2 {
  font-size: 1rem;
  padding: .4rem .5rem;
}

.c0 > .c4 {
  font-size: .875rem;
  padding: .25rem .5rem;
}

.c3 {
  box-sizing: border-box;
  margin: 0;
}

.c5 {
  box-sizing: border-box;
}

.c1 {
  box-sizing: border-box;
  color: #323a46;
  fill: #323a46;
  font-family: inherit;
  position: fixed;
  z-index: 3000;
}

.c1 .c4 {
  background: #fff;
  border: solid 1px #dbdbdb;
}

.c1 .c2 {
  background: #0665d0;
  border: solid 1px #0556B2;
  color: #fff;
  fill: #fff;
}

.c1 .c2 ~ .c6[data-arrow-header="true"] {
  fill: #0665d0;
  stroke: #0556B2;
}

.c1 .c2 + .c4 {
  border-top: 0;
}

.c1 .c6[data-arrow-header="false"] {
  fill: #fff;
  stroke: #dbdbdb;
}

@media (min-width:768px) {
  .c0 > .c2 {
    font-size: 1rem;
    padding: .5rem .75rem;
  }

  .c0 > .c4 {
    font-size: .875rem;
    padding: .7rem .8rem;
  }
}

@media (min-width:1200px) {
  .c0 > .c2 {
    font-size: 1.15rem;
    padding: 1rem 1.1rem;
  }

  .c0 > .c4 {
    font-size: 1rem;
    padding: .75rem 1rem;
  }
}

<div
    class="c0 c1"
  >
    <h4
      class="c2 c3"
    >
      Header
    </h4>
    <div
      class="c4 c5"
    >
      Content
    </div>
    <svg
      class="c6 c7"
    >
      <path
        d="M251.8,371.6c-17.4,5.9-37.2,2.6-50.4-8L16.3,215.3v-0.1c-18.1-14.5-18.1-38.1,0-52.6L201.4,14.2 c13.3-10.7,33.1-13.8,50.4-8"
      />
      <path
        d="M371,0c5.9,17.4,2.6,37.2-8,50.4L214.7,235.5h-0.1c-14.5,18.1-38.1,18.1-52.6,0L13.6,50.4 C2.9,37.1-0.2,17.3,5.6,0"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`<PopoverElement /> should render component with soft colors 1`] = `
<DocumentFragment>
  .c7 {
  position: absolute;
  stroke-width: 20px;
}

.c7[data-src-position="1"],
.c7[data-src-position="2"] {
  height: 15px;
  width: 10px;
}

.c7[data-src-position="1"] path:last-child,
.c7[data-src-position="2"] path:last-child {
  display: none;
}

.c7[data-src-position="4"],
.c7[data-src-position="8"] {
  height: 10px;
  width: 15px;
}

.c7[data-src-position="4"] path:first-child,
.c7[data-src-position="8"] path:first-child {
  display: none;
}

.c7[data-src-position="1"],
.c7[data-src-position="8"] {
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
}

.c0 > .c2 {
  font-size: 1rem;
  padding: .5rem .75rem;
}

.c0 > .c4 {
  font-size: .875rem;
  padding: .7rem .8rem;
}

.c3 {
  box-sizing: border-box;
  margin: 0;
}

.c5 {
  box-sizing: border-box;
}

.c1 {
  box-sizing: border-box;
  color: #323a46;
  fill: #323a46;
  font-family: inherit;
  position: fixed;
  z-index: 3000;
}

.c1 .c4 {
  background: #fff;
  border: solid 1px #dbdbdb;
}

.c1 .c2 {
  background: #cde0f5;
  border: solid 1px #a7c9ee;
  color: #033c7c;
  fill: #033c7c;
}

.c1 .c2 ~ .c6[data-arrow-header="true"] {
  fill: #cde0f5;
  stroke: #a7c9ee;
}

.c1 .c2 + .c4 {
  border-top: 0;
}

.c1 .c6[data-arrow-header="false"] {
  fill: #fff;
  stroke: #dbdbdb;
}

<div
    class="c0 c1"
  >
    <h4
      class="c2 c3"
    >
      Header
    </h4>
    <div
      class="c4 c5"
    >
      Content
    </div>
    <svg
      class="c6 c7"
    >
      <path
        d="M251.8,371.6c-17.4,5.9-37.2,2.6-50.4-8L16.3,215.3v-0.1c-18.1-14.5-18.1-38.1,0-52.6L201.4,14.2 c13.3-10.7,33.1-13.8,50.4-8"
      />
      <path
        d="M371,0c5.9,17.4,2.6,37.2-8,50.4L214.7,235.5h-0.1c-14.5,18.1-38.1,18.1-52.6,0L13.6,50.4 C2.9,37.1-0.2,17.3,5.6,0"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`<PopoverElement /> should render component with transition 1`] = `
<DocumentFragment>
  .c7 {
  position: absolute;
  stroke-width: 20px;
}

.c7[data-src-position="1"],
.c7[data-src-position="2"] {
  height: 15px;
  width: 10px;
}

.c7[data-src-position="1"] path:last-child,
.c7[data-src-position="2"] path:last-child {
  display: none;
}

.c7[data-src-position="4"],
.c7[data-src-position="8"] {
  height: 10px;
  width: 15px;
}

.c7[data-src-position="4"] path:first-child,
.c7[data-src-position="8"] path:first-child {
  display: none;
}

.c7[data-src-position="1"],
.c7[data-src-position="8"] {
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
}

.c0 > .c2 {
  font-size: 1rem;
  padding: .5rem .75rem;
}

.c0 > .c4 {
  font-size: .875rem;
  padding: .7rem .8rem;
}

.c3 {
  box-sizing: border-box;
  margin: 0;
}

.c5 {
  box-sizing: border-box;
}

.c1 {
  box-sizing: border-box;
  color: #323a46;
  fill: #323a46;
  font-family: inherit;
  position: fixed;
  z-index: 3000;
}

.c1 .c4 {
  background: #fff;
  border: solid 1px #dbdbdb;
}

.c1 .c2 {
  background: #0665d0;
  border: solid 1px #0556B2;
  color: #fff;
  fill: #fff;
}

.c1 .c2 ~ .c6[data-arrow-header="true"] {
  fill: #0665d0;
  stroke: #0556B2;
}

.c1 .c2 + .c4 {
  border-top: 0;
}

.c1 .c6[data-arrow-header="false"] {
  fill: #fff;
  stroke: #dbdbdb;
}

.c1.src-popover-show-active,
.c1.src-popover-hide-active {
  -webkit-transition: undefinedms 0s ease-in-out;
  transition: undefinedms 0s ease-in-out;
  -webkit-transition-property: -webkit-transform,opacity;
  -webkit-transition-property: transform,opacity;
  transition-property: transform,opacity;
}

.c1.src-popover-show {
  opacity: 0;
}

.c1.src-popover-show[data-src-position="1"] {
  -webkit-transform: translateX(-30px);
  -ms-transform: translateX(-30px);
  transform: translateX(-30px);
}

.c1.src-popover-show[data-src-position="2"] {
  -webkit-transform: translateX(30px);
  -ms-transform: translateX(30px);
  transform: translateX(30px);
}

.c1.src-popover-show[data-src-position="4"] {
  -webkit-transform: translateY(-30px);
  -ms-transform: translateY(-30px);
  transform: translateY(-30px);
}

.c1.src-popover-show[data-src-position="8"] {
  -webkit-transform: translateY(-30px);
  -ms-transform: translateY(-30px);
  transform: translateY(-30px);
}

.c1.src-popover-show-active {
  opacity: 1;
}

.c1.src-popover-show-active[data-src-position="1"],
.c1.src-popover-show-active[data-src-position="2"] {
  -webkit-transform: translateX(0);
  -ms-transform: translateX(0);
  transform: translateX(0);
}

.c1.src-popover-show-active[data-src-position="4"],
.c1.src-popover-show-active[data-src-position="8"] {
  -webkit-transform: translateY(0);
  -ms-transform: translateY(0);
  transform: translateY(0);
}

.c1.src-popover-hide {
  opacity: 1;
}

.c1.src-popover-hide[data-src-position="1"],
.c1.src-popover-hide[data-src-position="2"] {
  -webkit-transform: translateX(0);
  -ms-transform: translateX(0);
  transform: translateX(0);
}

.c1.src-popover-hide[data-src-position="4"],
.c1.src-popover-hide[data-src-position="8"] {
  -webkit-transform: translateY(0);
  -ms-transform: translateY(0);
  transform: translateY(0);
}

.c1.src-popover-hide-active {
  opacity: 0;
}

.c1.src-popover-hide-active[data-src-position="1"] {
  -webkit-transform: translateX(-30px);
  -ms-transform: translateX(-30px);
  transform: translateX(-30px);
}

.c1.src-popover-hide-active[data-src-position="2"] {
  -webkit-transform: translateX(30px);
  -ms-transform: translateX(30px);
  transform: translateX(30px);
}

.c1.src-popover-hide-active[data-src-position="4"] {
  -webkit-transform: translateY(-30px);
  -ms-transform: translateY(-30px);
  transform: translateY(-30px);
}

.c1.src-popover-hide-active[data-src-position="8"] {
  -webkit-transform: translateY(-30px);
  -ms-transform: translateY(-30px);
  transform: translateY(-30px);
}

<div
    class="c0 c1"
  >
    <h4
      class="c2 c3"
    >
      Header
    </h4>
    <div
      class="c4 c5"
    >
      Content
    </div>
    <svg
      class="c6 c7"
    >
      <path
        d="M251.8,371.6c-17.4,5.9-37.2,2.6-50.4-8L16.3,215.3v-0.1c-18.1-14.5-18.1-38.1,0-52.6L201.4,14.2 c13.3-10.7,33.1-13.8,50.4-8"
      />
      <path
        d="M371,0c5.9,17.4,2.6,37.2-8,50.4L214.7,235.5h-0.1c-14.5,18.1-38.1,18.1-52.6,0L13.6,50.4 C2.9,37.1-0.2,17.3,5.6,0"
      />
    </svg>
  </div>
</DocumentFragment>
`;
